--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <groupId>org.noear</groupId>
             <artifactId>mybatis-solon-plugin</artifactId>
             <version>${solon.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mybatis</groupId>
+                    <artifactId>mybatis</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>cn.mybatis-mp</groupId>
