--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.mybatis-mp</groupId>
         <artifactId>mybatis-mp</artifactId>
-        <version>1.6.7</version>
+        <version>1.6.8-rc</version>
     </parent>
     <url>https://gitee.com/mybatis-mp/mybatis-mp-solon-plugin</url>
     <description>
@@ -14,7 +14,7 @@
     </description>
 
     <artifactId>mybatis-mp-solon-plugin</artifactId>
-    <version>1.6.7</version>
+    <version>1.6.8-rc</version>
 
     <issueManagement>
         <system>Gitee Issue</system>
@@ -30,7 +30,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <solon.version>2.9.2</solon.version>
+        <solon.version>2.9.3</solon.version>
     </properties>
 
     <dependencyManagement>
