--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.mybatis-mp</groupId>
         <artifactId>mybatis-mp</artifactId>
-        <version>1.6.8-rc</version>
+        <version>1.6.8-rc2</version>
     </parent>
     <url>https://gitee.com/mybatis-mp/mybatis-mp-solon-plugin</url>
     <description>
@@ -14,7 +14,7 @@
     </description>
 
     <artifactId>mybatis-mp-solon-plugin</artifactId>
-    <version>1.6.8-rc</version>
+    <version>1.6.8-rc2</version>
 
     <issueManagement>
         <system>Gitee Issue</system>
