--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.mybatis-mp</groupId>
         <artifactId>mybatis-mp</artifactId>
-        <version>1.7.5</version>
+        <version>1.7.6-RC</version>
     </parent>
     <url>https://gitee.com/mybatis-mp/mybatis-mp-solon-plugin</url>
     <description>
@@ -14,7 +14,7 @@
     </description>
 
     <artifactId>mybatis-mp-solon-plugin</artifactId>
-    <version>1.7.5</version>
+    <version>1.7.6-RC</version>
 
     <issueManagement>
         <system>Gitee Issue</system>
@@ -27,7 +27,7 @@
     </scm>
 
     <properties>
-        <solon.version>2.9.4</solon.version>
+        <solon.version>3.0.3</solon.version>
     </properties>
 
     <dependencyManagement>
