--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>cn.mybatis-mp</groupId>
         <artifactId>mybatis-mp</artifactId>
-        <version>1.7.9-RC9</version>
+        <version>1.7.9</version>
     </parent>
     <url>https://gitee.com/mybatis-mp/mybatis-mp-solon-plugin</url>
     <description>
@@ -28,7 +28,7 @@
     </description>
 
     <artifactId>mybatis-mp-solon-plugin</artifactId>
-    <version>1.7.9-RC9</version>
+    <version>1.7.9</version>
 
     <issueManagement>
         <system>Gitee Issue</system>
@@ -41,7 +41,7 @@
     </scm>
 
     <properties>
-        <solon.version>3.0.5</solon.version>
+        <solon.version>3.0.6</solon.version>
     </properties>
 
     <dependencyManagement>
