--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~  Copyright (c) 2024-2025, Ai东 (abc-127@live.cn).
+  ~  Copyright (c) 2024-2025, Ai东 (abc-127@live.cn) xbatis.
   ~
   ~  Licensed under the Apache License, Version 2.0 (the "License").
   ~  you may not use this file except in compliance with the License.
@@ -18,26 +18,26 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>cn.mybatis-mp</groupId>
-        <artifactId>mybatis-mp</artifactId>
-        <version>1.8.1-RC3</version>
+        <groupId>cn.xbatis</groupId>
+        <artifactId>xbatis</artifactId>
+        <version>1.8.1</version>
     </parent>
-    <url>https://gitee.com/mybatis-mp/mybatis-mp-solon-plugin</url>
+    <url>https://gitee.com/xbatis/xbatis-solon-plugin</url>
     <description>
-        mybatis-mp 之 solon 容器 启动插件
+        xbatis 之 solon 容器 启动插件
     </description>
 
-    <artifactId>mybatis-mp-solon-plugin</artifactId>
-    <version>1.8.1-RC3</version>
+    <artifactId>xbatis-solon-plugin</artifactId>
+    <version>1.8.1</version>
 
     <issueManagement>
         <system>Gitee Issue</system>
-        <url>https://gitee.com/mybatis-mp/mybatis-mp-solon-plugin/issues</url>
+        <url>https://gitee.com/xbatis/xbatis-solon-plugin/issues</url>
     </issueManagement>
 
     <scm>
-        <connection>https://gitee.com/mybatis-mp/mybatis-mp-solon-plugin.git</connection>
-        <url>https://gitee.com/mybatis-mp/mybatis-mp-solon-plugin</url>
+        <connection>https://gitee.com/xbatis/xbatis-solon-plugin.git</connection>
+        <url>https://gitee.com/xbatis/xbatis-solon-plugin</url>
     </scm>
 
     <properties>
@@ -62,8 +62,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.mybatis-mp</groupId>
-            <artifactId>mybatis-mp-core</artifactId>
+            <groupId>cn.xbatis</groupId>
+            <artifactId>xbatis-core</artifactId>
         </dependency>
 
         <dependency>
