--- a/src/main/resources/META-INF/solon/xbatis-solon-plugin.properties
+++ b/src/main/resources/META-INF/solon/xbatis-solon-plugin.properties
@@ -1,5 +1,5 @@
 #
-#  Copyright (c) 2024-2025, Ai? (abc-127@live.cn).
+#  Copyright (c) 2024-2025, Ai?(abc-127@live.cn).
 #
 #  Licensed under the Apache License, Version 2.0 (the "License").
 #  you may not use this file except in compliance with the License.
@@ -12,5 +12,5 @@
 #
 #
 
-solon.plugin=cn.mybatis.mp.solon.integration.XPluginImpl
+solon.plugin=cn.xbatis.solon.integration.XPluginImpl
 solon.plugin.priority=6
